ggml/5d/d782707e3634fbd101f080c502722e6a367ac8/ggml-0-x86-cpu-low-perf/ctest_debug-make.log
+ make -j
[  1%] Building C object src/CMakeFiles/ggml.dir/ggml.c.o
[  2%] Building C object src/CMakeFiles/ggml.dir/ggml-alloc.c.o
[  3%] Building C object src/CMakeFiles/ggml.dir/ggml-quants.c.o
[  4%] Building CXX object examples/CMakeFiles/common.dir/common.cpp.o
[  5%] Building C object src/CMakeFiles/ggml.dir/ggml-backend.c.o
[  6%] Linking C shared library libggml.so
[  6%] Built target ggml
[  7%] Building C object tests/CMakeFiles/test-vec0.dir/test-vec0.c.o
[  9%] Building C object tests/CMakeFiles/test-vec1.dir/test-vec1.c.o
[ 10%] Building CXX object tests/CMakeFiles/test-grad0.dir/test-grad0.cpp.o
[ 11%] Building CXX object tests/CMakeFiles/test-opt.dir/test-opt.cpp.o
[ 12%] Building CXX object tests/CMakeFiles/test-quantize-perf.dir/test-quantize-perf.cpp.o
[ 13%] Building CXX object tests/CMakeFiles/test-quantize-fns.dir/test-quantize-fns.cpp.o
[ 14%] Building C object tests/CMakeFiles/test-mul-mat0.dir/test-mul-mat0.c.o
[ 15%] Building C object tests/CMakeFiles/test-mul-mat2.dir/test-mul-mat2.c.o
[ 17%] Building C object tests/CMakeFiles/test0.dir/test0.c.o
[ 18%] Building C object tests/CMakeFiles/test1.dir/test1.c.o
[ 19%] Building C object tests/CMakeFiles/test2.dir/test2.c.o
[ 20%] Linking C executable ../bin/test-vec0
[ 21%] Building C object tests/CMakeFiles/test3.dir/test3.c.o
[ 22%] Building C object tests/CMakeFiles/test-dup.dir/test-dup.c.o
[ 23%] Building C object tests/CMakeFiles/test-pool.dir/test-pool.c.o
[ 25%] Building C object tests/CMakeFiles/test-conv-transpose.dir/test-conv-transpose.c.o
[ 26%] Linking CXX executable ../bin/test-opt
[ 27%] Building C object tests/CMakeFiles/test-rel-pos.dir/test-rel-pos.c.o
[ 28%] Building C object tests/CMakeFiles/test-customop.dir/test-customop.c.o
[ 29%] Building C object tests/CMakeFiles/test-xpos.dir/test-xpos.c.o
[ 30%] Building CXX object tests/CMakeFiles/test-conv2d.dir/test-conv2d.cpp.o
[ 30%] Built target test-vec0
[ 31%] Building CXX object tests/CMakeFiles/test-conv1d.dir/test-conv1d.cpp.o
[ 32%] Linking C executable ../bin/test0
[ 34%] Building CXX object tests/CMakeFiles/test-mul-mat.dir/test-mul-mat.cpp.o
[ 35%] Linking C executable ../bin/test-dup
/home/ggml/work/ggml/tests/test2.c: In function ‘main’:
/home/ggml/work/ggml/tests/test2.c:26:65: error: ‘GGML_OPT_LBFGS’ undeclared (first use in this function); did you mean ‘GGML_OP_LOG’?
   26 |     struct ggml_opt_params opt_params = ggml_opt_default_params(GGML_OPT_LBFGS);
      |                                                                 ^~~~~~~~~~~~~~
      |                                                                 GGML_OP_LOG
/home/ggml/work/ggml/tests/test2.c:26:65: note: each undeclared identifier is reported only once for each function it appears in
In file included from /home/ggml/work/ggml/tests/test2.c:2:
/home/ggml/work/ggml/tests/test2.c:82:28: error: ‘GGML_OPT_OK’ undeclared (first use in this function); did you mean ‘GGML_OP_LOG’?
   82 |         GGML_ASSERT(res == GGML_OPT_OK);
      |                            ^~~~~~~~~~~
/home/ggml/work/ggml/src/../include/ggml/ggml.h:258:15: note: in definition of macro ‘GGML_ASSERT’
  258 |         if (!(x)) { \
      |               ^
make[2]: *** [tests/CMakeFiles/test2.dir/build.make:76: tests/CMakeFiles/test2.dir/test2.c.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:593: tests/CMakeFiles/test2.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 36%] Building CXX object tests/CMakeFiles/test-backend-buffer.dir/test-backend-buffer.cpp.o
[ 38%] Building CXX object examples/whisper/CMakeFiles/whisper-cpp.dir/whisper.cpp.o
[ 38%] Building CXX object tests/CMakeFiles/test-backend-ops.dir/test-backend-ops.cpp.o
/home/ggml/work/ggml/tests/test3.c: In function ‘main’:
/home/ggml/work/ggml/tests/test3.c:19:65: error: ‘GGML_OPT_LBFGS’ undeclared (first use in this function); did you mean ‘GGML_OP_LOG’?
   19 |     struct ggml_opt_params opt_params = ggml_opt_default_params(GGML_OPT_LBFGS);
      |                                                                 ^~~~~~~~~~~~~~
      |                                                                 GGML_OP_LOG
/home/ggml/work/ggml/tests/test3.c:19:65: note: each undeclared identifier is reported only once for each function it appears in
In file included from /home/ggml/work/ggml/tests/test3.c:1:
/home/ggml/work/ggml/tests/test3.c:71:28: error: ‘GGML_OPT_OK’ undeclared (first use in this function); did you mean ‘GGML_OP_LOG’?
   71 |         GGML_ASSERT(res == GGML_OPT_OK);
      |                            ^~~~~~~~~~~
/home/ggml/work/ggml/src/../include/ggml/ggml.h:258:15: note: in definition of macro ‘GGML_ASSERT’
  258 |         if (!(x)) { \
      |               ^
[ 39%] Building CXX object examples/CMakeFiles/common-ggml.dir/common-ggml.cpp.o
[ 40%] Building CXX object examples/mnist/CMakeFiles/mnist-cpu.dir/main-cpu.cpp.o
make[2]: *** [tests/CMakeFiles/test3.dir/build.make:76: tests/CMakeFiles/test3.dir/test3.c.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:619: tests/CMakeFiles/test3.dir/all] Error 2
[ 40%] Built target test-dup
[ 42%] Linking C executable ../bin/test-conv-transpose
[ 42%] Built target test0
[ 43%] Linking C executable ../bin/test-pool
[ 43%] Built target test-opt
[ 44%] Linking C executable ../bin/test-rel-pos
[ 45%] Linking C executable ../bin/test-xpos
[ 46%] Linking C executable ../bin/test-mul-mat0
[ 47%] Linking C executable ../bin/test-customop
[ 48%] Linking C executable ../bin/test1
[ 50%] Linking CXX executable ../bin/test-backend-buffer
[ 50%] Built target test-pool
[ 50%] Built target test-conv-transpose
[ 50%] Built target test-rel-pos
[ 50%] Built target test-customop
[ 51%] Linking CXX executable ../bin/test-grad0
[ 50%] Built target test-xpos
[ 51%] Built target test-mul-mat0
[ 51%] Built target test1
[ 51%] Built target test-backend-buffer
[ 51%] Built target test-grad0
[ 52%] Linking C executable ../bin/test-vec1
[ 52%] Built target test-vec1
[ 53%] Linking CXX executable ../bin/test-quantize-fns
/home/ggml/work/ggml/tests/test-conv2d.cpp:24:13: warning: ‘void ggml_log_callback_default(ggml_log_level, const char*, void*)’ defined but not used [-Wunused-function]
   24 | static void ggml_log_callback_default(ggml_log_level level, const char * text, void * user_data) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/ggml/work/ggml/tests/test-conv1d.cpp:24:13: warning: ‘void ggml_log_callback_default(ggml_log_level, const char*, void*)’ defined but not used [-Wunused-function]
   24 | static void ggml_log_callback_default(ggml_log_level level, const char * text, void * user_data) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
[ 54%] Linking C executable ../bin/test-mul-mat2
[ 54%] Built target test-quantize-fns
[ 54%] Built target test-mul-mat2
[ 55%] Linking CXX executable ../bin/test-conv1d
[ 56%] Linking CXX executable ../bin/test-conv2d
/home/ggml/work/ggml/examples/common-ggml.cpp: In function ‘bool ggml_common_quantize_0(std::ifstream&, std::ofstream&, ggml_ftype, const std::vector<std::__cxx11::basic_string<char> >&, const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/ggml/work/ggml/examples/common-ggml.cpp:50:12: warning: enumeration value ‘GGML_FTYPE_MOSTLY_IQ3_S’ not handled in switch [-Wswitch]
   50 |     switch (ftype) {
      |            ^
/home/ggml/work/ggml/examples/common-ggml.cpp:178:20: warning: enumeration value ‘GGML_TYPE_IQ3_S’ not handled in switch [-Wswitch]
  178 |             switch ((ggml_type) ttype) {
      |                    ^
[ 57%] Linking CXX executable ../bin/test-mul-mat
[ 57%] Built target test-conv2d
[ 59%] Linking CXX executable ../../bin/mnist-cpu
[ 59%] Built target test-conv1d
[ 59%] Built target test-mul-mat
[ 59%] Built target mnist-cpu
[ 60%] Linking CXX executable ../bin/test-quantize-perf
[ 60%] Built target test-quantize-perf
[ 61%] Linking CXX executable ../bin/test-backend-ops
[ 61%] Built target test-backend-ops
[ 62%] Linking CXX static library libcommon.a
[ 62%] Built target common
[ 63%] Linking CXX static library libcommon-ggml.a
[ 63%] Built target common-ggml
[ 64%] Linking CXX static library libwhisper-cpp.a
[ 64%] Built target whisper-cpp
make: *** [Makefile:146: all] Error 2

real	0m9.174s
user	0m23.025s
sys	0m2.231s
